testing apllication face cra

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Demo BigVision Product"
     />
+    <script defer type="module" src="%PUBLIC_URL%/modelAi.js"></script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/Frame.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
